<resources>
    <string name="app_name">BBITPROJECT</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="first_name">firstname</string>
    <string name="last_name">lastname</string>
    <string name="email">email</string>
    <string name="phone_number">phonenumber</string>
    <string name="password">password</string>
    <string name="User_name">User name</string>

</resources>
